# dummy_model_sandbox

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml
.github/workflows/: trigger-container-build-and-publish.yml  trigger-container-build-and-test.yml  trigger-retraining-container-build-and-publish.yml  trigger-retraining-container-build-and-test.yml
dummy_model/batch_inference/: typer_functions_inference.py
dummy_model/batch_inference/config/: DEV.yaml  LOCAL.yaml  PROD.yaml  UAT.yaml
dummy_model/batch_inference/config/environment/: local.yaml  prod.yaml
dummy_model/batch_inference/config/vars/: default.yaml
dummy_model/modules/: __init__.py  preprocessing.py
dummy_model/training/: typer_functions_training.py
dummy_model/training/config/: DEV.yaml  LOCAL.yaml
dummy_model/training/config/environment/: dev.yaml  local.yaml
dummy_model/training/config/mlflow_setup/: default.yaml
dummy_model/training/config/model/: default.yaml
dummy_model/training/config/sampling_strategy/: default.yaml
dummy_model/training/config/vars/: default.yaml
