[tool.poetry]
name = "dummy-model"
version = "0.1.0"
description = "Dummy Model"
authors = ["Rishabh Malviya <Rishabh.Malviya@docusign.com>"]
readme = "README.md"
packages = [{include = "dummy_model"}]

[tool.poetry.dependencies]
python = "3.10.6"
typer = "^0.7.0"
hydra-core = "^1.3.2"
pandas = "~2.1.4"
sagemaker = "2.191.0"
dictdiffer = "0.9.0"
ds-snowflake-utils = "1.8.1"
scikit-learn = "1.5.0"

# dev dependencies
pytest = { version = "^7.2.2", optional = true }
ipykernel = { version = "^6.23.2", optional = true }
jupyter = { version = "1.0.0", optional = true }
tornado = { version = "^6.4.1", optional = true }
psutil = { version = "^6.0.0", optional = true }

# training dependencies
mlflow = { version = "2.13.1", optional = true }
deprecated = { version = "^1.2.14", optional = true }
opentelemetry-semantic-conventions = { version = "^0.48b0", optional = true }

[tool.poetry.extras]
dev = [
    "pytest",
    "ipykernel",
    "jupyter",
    "tornado",
    "psutil"
]
training = [
    "mlflow",
    "deprecated",
    "opentelemetry-semantic-conventions"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
